--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 enum_dispatch = "0.3.8"
 lru = "0.7.5"
+bumpalo = { version = "3.9.1", features = ["boxed", "collections"] }
