--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 enum_dispatch = "0.3.8"
 lru = "0.7.5"
 bumpalo = { version = "3.9.1", features = ["boxed", "collections"] }
+thiserror = "1.0.31"
