--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ enum_dispatch = "0.3.8"
 lru = "0.7.5"
 bumpalo = { version = "3.10.0", features = ["boxed", "collections"] }
 thiserror = "1.0.31"
+num = "0.4.0"
